<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Widgets Anywhere</string>
    <string name="lock_screen_widgets">Lock Screen Widgets</string>
    <string name="widget_drawer" translatable="false">Widget Drawer</string>
    <string name="version_template">v%s</string>
    <string name="edit_gesture_hint">Tap the widget frame with two fingers to move and resize it.</string>
    <string name="edit_gesture_hint_2">Great! Tap with two fingers to hide the editing UI.</string>
    <string name="hide_gesture_hint">Tap the widget frame with three fingers to temporarily hide it. It will remain hidden until you turn the display off and on again.</string>
    <string name="accessibility_service_desc">Widgets Anywhere requires an Accessibility Service to display widgets on the lock screen and in the notification center. No data is collected, and no actions will be performed on the device. This permission is optional if you are only using the home screen widget stacks.</string>
    <string name="lock_screen_widgets_desc">Display your home screen widgets in one or more frames above the lock screen.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_appearance">Appearance</string>
    <string name="category_behavior">Behavior</string>
    <string name="category_visibility">Visibility</string>
    <string name="category_layout">Layout</string>
    <string name="category_interaction">Interaction</string>
    <string name="alert_remove_widget_confirm_desc">Are you sure you want to remove this item?</string>
    <string name="settings_screen_hide_when_notifications_shown">Hide when Showing Notifications</string>
    <string name="settings_screen_hide_when_notifications_shown_desc">Hide the widget frame while there are notifications being shown. This requires the use of a Notification Listener Service. You don\'t have to grant this permission right now.</string>
    <string name="settings_screen_page_indicator_behavior">Page Indicator Behavior</string>
    <string name="settings_screen_hide_on_notification_shade">Hide when Notification Shade Shown</string>
    <string name="settings_screen_hide_on_notification_shade_desc">Try to hide the widget frame when the notification shade is pulled down. This may not work on all devices.</string>
    <string name="settings_screen_hide_on_security_input">Hide on Security Input</string>
    <string name="settings_screen_hide_on_security_input_desc">Try to hide the widget frame when the PIN/pattern/password input view is shown. This may not work on all devices.</string>
    <string name="settings_screen_animate_show_hide">Animate Show/Hide</string>
    <string name="settings_screen_animate_show_hide_desc">Animate the showing/hiding of the widget frame.</string>
    <string name="settings_screen_frame_col_count">Columns per Page</string>
    <string name="settings_screen_frame_row_count">Rows per Page</string>
    <string name="settings_screen_accessibility_event_delay">Accessibility Event Delay</string>
    <string name="settings_screen_accessibility_event_delay_desc">Sets the delay between Accessibility Events that Widgets Anywhere responds to. Shorter values mean the frame will respond faster to changes, at the potential cost of device performance and battery life.</string>
    <string name="settings_screen_non_present_ids">Hide on Non-Present IDs</string>
    <string name="settings_screen_non_present_ids_desc">The widget frame will hide itself when these IDs are not on-screen. You can find which IDs should go here by enabling both Debug switches and looking at the IDs that are highlighted in red when you want the frame to be hidden.</string>
    <string name="settings_screen_present_ids">Hide on Present IDs</string>
    <string name="settings_screen_present_ids_desc">The widget frame will hide itself when these IDs are on-screen. You can find which IDs should go here by enabling both Debug switches and looking at the IDs that are highlighted in green when you want the frame to be hidden.</string>
    <string name="settings_screen_show_in_notification_center">Show when Notification Shade is Fully Expanded</string>
    <string name="settings_screen_show_in_notification_center_desc">Enabling this option will cause the widget frame to appear when the shade is fully expanded. This state has its own independent positioning and size.</string>
    <string name="settings_screen_show_on_main_lock_screen">Show on Main Lock Screen</string>
    <string name="settings_screen_show_on_main_lock_screen_desc">If you\'re using the option to show in the notification center, you may not want the widget frame to show on the main lock screen. Disable this option to have the frame only show when the notification center is fully expanded.</string>
    <string name="settings_screen_corner_radius">Corner Radius</string>
    <string name="settings_screen_corner_radius_desc">Change how rounded the corners of the widget frame are.</string>
    <string name="settings_screen_widget_corner_radius">Widget Corner Radius</string>
    <string name="settings_screen_widget_corner_radius_desc">Change how rounded the corners of widgets are.</string>
    <string name="settings_screen_background_color">Background Color</string>
    <string name="settings_screen_background_color_desc">Set the background color of the widget frame, including transparency.</string>
    <string name="settings_screen_masked_mode">Masked Mode (Experimental)</string>
    <string name="settings_screen_masked_mode_desc">Masked Mode attempts to draw the wallpaper as the background of the widget frame. On a compatible device, this will give the appearance of a transparent frame, while still allowing you to overlay UI elements.</string>
    <string name="settings_screen_masked_mode_dim_amount">Masked Dim Amount</string>
    <string name="settings_screen_masked_mode_dim_amount_desc">Some devices dim the wallpaper on the lock screen slightly. Adjust this to match.</string>
    <string name="settings_screen_touch_protection">Touch Protection</string>
    <string name="settings_screen_touch_protection_desc">Ignore touches on the widget frame when the proximity sensor is covered.</string>
    <string name="settings_screen_request_unlock">Prompt for Unlock/Dismiss Notification Center</string>
    <string name="settings_screen_request_unlock_desc">If Widgets Anywhere detects that a widget is launching an app, it will prompt to unlock the device and dismiss the notification center. Disable this option to prevent that behavior.</string>
    <string name="settings_screen_hide_on_facewidgets">Hide on FaceWidgets (Now Bar) Screen</string>
    <string name="settings_screen_hide_on_facewidgets_desc">Hide the frame when the FaceWidgets screen is shown. This is also known as the expanded Now Bar screen on One UI 7 and later.</string>
    <string name="settings_screen_hide_in_landscape">Hide in Landscape</string>
    <string name="settings_screen_hide_in_landscape_desc">Hide the widget frame when the device is in landscape.</string>
    <string name="settings_screen_separate_position_for_lock_nc">Separate Notification Center Position when Locked</string>
    <string name="settings_screen_separate_position_for_lock_nc_desc">On One UI 3, the notification center layout is slightly different when locked and unlocked. Enable this to use separate positioning for the widget frame in those two modes.</string>
    <string name="settings_screen_lock_widget_frame">Lock Widget Frame</string>
    <string name="settings_screen_lock_widget_frame_desc">When this is enabled, the widget frame will ignore all direct touches. You won\'t be able to move it or modify the widgets from the frame, but the three-finger hide gesture will still function and you\'ll still be able to interact with widgets.</string>
    <string name="settings_screen_ignore_widget_touches">Ignore Widget Touches</string>
    <string name="settings_screen_ignore_widget_touches_desc">When enabled, touches on widgets will be ignored. This will prevent accidental app launches, but will also prevent interacting with widgets.</string>
    <string name="settings_screen_animation_duration">Animation Duration</string>
    <string name="settings_screen_animation_duration_desc">Set how long it takes for the fade-in/fade-out animation to complete.</string>
    <string name="settings_screen_blur_background">Blur Background</string>
    <string name="settings_screen_blur_background_desc">On Samsung devices and Android 12 and later, it\'s possible to blur the background of the frame. This won\'t apply where Masked Mode applies, and may not work on all devices or in battery saving mode.</string>
    <string name="settings_screen_blur_background_amount">Blur Amount</string>
    <string name="settings_screen_blur_background_amount_desc">Set how blurred the background should be.</string>
    <string name="settings_screen_remember_position">Remember Position</string>
    <string name="settings_screen_remember_position_desc">By default, the widget frame remembers which page it was on the last time it was on-screen and scrolls to that position every time it shows. Disable this option to have the widget frame always show the first page when it appears.</string>
    <string name="settings_screen_hide_on_edge_panels">Hide on Edge Panels</string>
    <string name="settings_screen_hide_on_edge_panels_desc">Hide the widget frame when Samsung\'s Edge Panels are open.</string>
    <string name="settings_screen_hide_on_present_apps">Hide on Present Apps</string>
    <string name="settings_screen_hide_on_present_apps_desc">Choose which apps should cause the widget frame to hide if they\'re shown on the lock screen.</string>
    <string name="settings_screen_separate_layout">Separate Layout for Landscape</string>
    <string name="settings_screen_separate_layout_desc">Set different positions and sizes for the widget frame in landscape mode.</string>
    <string name="settings_screen_force_widget_update">Force Widget Update</string>
    <string name="settings_screen_force_widget_update_desc">When widgets are shown on the screen, pending widget updates aren\'t always dispatched. To work around this, all widgets are forced to reload by default, which can cause short flashing. Disable this option to avoid flashing, at the potential cost of up-to-date widgets.</string>
    <string name="settings_screen_hide_when_keyboard_shown">Hide when Keyboard Shown</string>
    <string name="settings_screen_hide_when_keyboard_shown_desc">Hide the widget frame when the software keyboard is currently visible on screen.</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_on_empty_tap">Tap Empty Space to Close Drawer</string>
    <string name="show_drawer_handle">Show Drawer Handle</string>
    <string name="show_drawer_handle_shadow">Show Drawer Handle Shadow</string>
    <string name="drawer_handle_height">Drawer Handle Height</string>
    <string name="drawer_handle_width">Drawer Handle Width</string>
    <string name="drawer_handle_color">Drawer Handle Color</string>
    <string name="drawer_background_color">Drawer Background Color</string>
    <string name="drawer_column_count">Drawer Column Count</string>
    <string name="directly_check_for_activity">Directly Check for Activity</string>
    <string name="directly_check_for_activity_desc">When enabled, Widgets Anywhere will use Android\'s API to check whether a widget tap is launching an Activity. This can be faster than Widgets Anywhere\'s built-in detection, but may cause false positives.</string>
    <string name="add_frame">Add Widget Frame</string>
    <string name="remove_frame">Remove Widget Frame</string>
    <string name="select_frame">Select Frame</string>
    <string name="settings_screen_category_grid">Grid</string>
    <string name="frame_management">Frame Management</string>
</resources>