<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/frame_management"
        android:key="frame_management_category">

        <Preference
            android:key="add_secondary_frame"
            android:title="@string/add_frame"
            android:icon="@drawable/ic_baseline_add_24"
            />

        <Preference
            android:key="remove_secondary_frame"
            android:title="@string/remove_frame"
            android:icon="@drawable/ic_baseline_remove_circle_24"
            />

    </PreferenceCategory>

    <tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew
        android:title="@string/category_appearance"
        android:key="settings_appearance_category">

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:title="@string/settings_screen_background_color"
            android:summary="@string/settings_screen_background_color_desc"
            android:icon="@drawable/ic_baseline_color_lens_24"
            android:key="background_color"
            android:defaultValue="0"
            app:cpv_showAlphaSlider="true"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_blur_background"
            android:summary="@string/settings_screen_blur_background_desc"
            android:icon="@drawable/ic_baseline_blur_on_24"
            android:key="blur_background"
            android:defaultValue="false"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_blur_background_amount"
            android:summary="@string/settings_screen_blur_background_amount_desc"
            android:icon="@drawable/ic_baseline_deblur_24"
            android:key="blur_background_amount"
            android:defaultValue="100"
            android:dependency="blur_background"
            app:minValue="1"
            app:maxValue="1000"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_masked_mode"
            android:summary="@string/settings_screen_masked_mode_desc"
            android:icon="@drawable/ic_baseline_opacity_24"
            android:key="masked_mode"
            android:defaultValue="false"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_masked_mode_dim_amount"
            android:summary="@string/settings_screen_masked_mode_dim_amount_desc"
            android:icon="@drawable/ic_baseline_brightness_medium_24"
            android:key="masked_mode_wallpaper_dim_amount"
            android:defaultValue="0"
            android:dependency="masked_mode"
            app:minValue="0"
            app:maxValue="10000"
            app:scale="0.01"
            app:units="%"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_corner_radius"
            android:summary="@string/settings_screen_corner_radius_desc"
            android:key="corner_radius"
            android:icon="@drawable/ic_baseline_rounded_corner_24"
            android:defaultValue="@integer/def_corner_radius_dp_scaled_10x"
            app:scale="0.1"
            app:minValue="0"
            app:maxValue="640"
            app:units="dp"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_widget_corner_radius"
            android:summary="@string/settings_screen_widget_corner_radius_desc"
            android:key="frame_widget_corner_radius"
            android:icon="@drawable/ic_baseline_rounded_corner_24"
            android:defaultValue="@integer/def_corner_radius_dp_scaled_10x"
            app:scale="0.1"
            app:minValue="0"
            app:maxValue="640"
            app:units="dp"
            />

    </tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew>

    <tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew
        android:title="@string/settings_screen_category_grid"
        android:key="frame_grid_settings">

        <Preference
            android:title="@string/select_frame"
            android:key="select_frame_pref"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_frame_col_count"
            android:key="frame_col_count"
            android:icon="@drawable/ic_baseline_view_column_24"
            android:defaultValue="1"
            app:minValue="1"
            app:maxValue="20"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_frame_row_count"
            android:key="frame_row_count"
            android:icon="@drawable/ic_baseline_view_row_24"
            android:defaultValue="1"
            app:minValue="1"
            app:maxValue="20"
            />

    </tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew>

    <tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew
        android:title="@string/category_layout"
        android:key="settings_layout_category">

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_lock_widget_frame"
            android:summary="@string/settings_screen_lock_widget_frame_desc"
            android:key="lock_widget_frame"
            android:icon="@drawable/ic_baseline_lock_24"
            android:defaultValue="false"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_separate_position_for_lock_nc"
            android:summary="@string/settings_screen_separate_position_for_lock_nc_desc"
            android:key="separate_position_for_lock_notification"
            android:icon="@drawable/ic_baseline_layers_24"
            android:defaultValue="false"
            android:dependency="show_in_notification_center"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_separate_layout"
            android:summary="@string/settings_screen_separate_layout_desc"
            android:key="frame_separate_layout_for_landscape"
            android:icon="@drawable/baseline_screen_rotation_24"
            android:defaultValue="false"
            />

    </tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew>

    <tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew
        android:title="@string/category_visibility"
        android:key="settings_visibility_category">

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_hide_when_notifications_shown"
            android:summary="@string/settings_screen_hide_when_notifications_shown_desc"
            android:key="hide_on_notifications"
            android:icon="@drawable/ic_baseline_notifications_off_24"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_hide_on_notification_shade"
            android:summary="@string/settings_screen_hide_on_notification_shade_desc"
            android:key="hide_on_notification_shade"
            android:icon="@drawable/ic_baseline_clear_all_24"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_hide_on_security_input"
            android:summary="@string/settings_screen_hide_on_security_input_desc"
            android:key="hide_on_security_page"
            android:icon="@drawable/is_baseline_password_24"
            android:defaultValue="true"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_hide_on_facewidgets"
            android:summary="@string/settings_screen_hide_on_facewidgets_desc"
            android:key="hide_on_facewidgets"
            android:icon="@drawable/ic_baseline_widgets_24"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_hide_in_landscape"
            android:summary="@string/settings_screen_hide_in_landscape_desc"
            android:key="hide_in_landscape"
            android:icon="@drawable/ic_baseline_crop_landscape_24"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_hide_when_keyboard_shown"
            android:summary="@string/settings_screen_hide_when_keyboard_shown_desc"
            android:key="hide_frame_when_keyboard_shown"
            android:icon="@drawable/baseline_keyboard_24"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_hide_on_edge_panels"
            android:summary="@string/settings_screen_hide_on_edge_panels_desc"
            android:key="frame_hide_on_edge_panel"
            android:icon="@drawable/border_right"
            android:defaultValue="true"
            />

        <Preference
            android:title="@string/settings_screen_present_ids"
            android:summary="@string/settings_screen_present_ids_desc"
            android:key="present_ids_launch"
            android:icon="@drawable/ic_baseline_visibility_off_24"
            />

        <Preference
            android:title="@string/settings_screen_non_present_ids"
            android:summary="@string/settings_screen_non_present_ids_desc"
            android:key="non_present_ids_launch"
            android:icon="@drawable/ic_baseline_visibility_off_24"
            />

        <Preference
            android:title="@string/settings_screen_hide_on_present_apps"
            android:summary="@string/settings_screen_hide_on_present_apps_desc"
            android:key="hide_on_present_apps"
            android:icon="@drawable/ic_baseline_visibility_off_24"
            />

    </tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew>

    <tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew
        android:title="@string/category_behavior"
        android:key="settings_behavior_category">

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_show_in_notification_center"
            android:summary="@string/settings_screen_show_in_notification_center_desc"
            android:key="show_in_notification_center"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:defaultValue="false"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_show_on_main_lock_screen"
            android:summary="@string/settings_screen_show_on_main_lock_screen_desc"
            android:key="show_on_main_lock_screen"
            android:icon="@drawable/ic_baseline_lock_24"
            android:defaultValue="true"
            android:dependency="show_in_notification_center"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_remember_position"
            android:summary="@string/settings_screen_remember_position_desc"
            android:key="frame_remember_position"
            android:icon="@drawable/swap"
            android:defaultValue="true"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_force_widget_update"
            android:summary="@string/settings_screen_force_widget_update_desc"
            android:key="frame_force_reload_widgets"
            android:icon="@drawable/baseline_refresh_24"
            android:defaultValue="true"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_animate_show_hide"
            android:summary="@string/settings_screen_animate_show_hide_desc"
            android:key="animate_show_hide"
            android:icon="@drawable/ic_baseline_animation_24"
            android:defaultValue="true"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_animation_duration"
            android:summary="@string/settings_screen_animation_duration_desc"
            android:key="animation_duration"
            android:icon="@drawable/ic_baseline_timer_24"
            android:defaultValue="300"
            android:dependency="animate_show_hide"
            app:minValue="0"
            app:maxValue="2000"
            app:units="ms"
            />

        <tk.zwander.common.prefs.AutoSummaryListPreference
            android:title="@string/settings_screen_page_indicator_behavior"
            android:key="page_indicator_behavior"
            android:icon="@drawable/ic_baseline_visibility_24"
            android:entries="@array/page_indicator_behavior_names"
            android:entryValues="@array/page_indicator_behavior_values"
            android:defaultValue="1"
            />

        <tk.zwander.seekbarpreference.SeekBarPreference
            android:title="@string/settings_screen_accessibility_event_delay"
            android:summary="@string/settings_screen_accessibility_event_delay_desc"
            android:icon="@drawable/ic_baseline_timer_24"
            android:key="accessibility_event_delay"
            android:defaultValue="50"
            app:minValue="0"
            app:maxValue="5000"
            app:units="ms"
            />

    </tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew>

    <tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew
        android:title="@string/category_interaction"
        android:key="settings_interaction_category">

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_touch_protection"
            android:summary="@string/settings_screen_touch_protection_desc"
            android:icon="@drawable/ic_baseline_block_24"
            android:key="touch_protection"
            android:defaultValue="false"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_ignore_widget_touches"
            android:summary="@string/settings_screen_ignore_widget_touches_desc"
            android:key="frame_ignore_widget_touches"
            android:icon="@drawable/baseline_do_not_touch_24"
            android:defaultValue="false"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/settings_screen_request_unlock"
            android:summary="@string/settings_screen_request_unlock_desc"
            android:key="request_unlock"
            android:icon="@drawable/ic_baseline_launch_24"
            android:defaultValue="true"
            />

        <tk.zwander.common.prefs.MaterialSwitchPreference
            android:title="@string/directly_check_for_activity"
            android:summary="@string/directly_check_for_activity_desc"
            android:key="frame_directly_check_for_activity"
            android:dependency="request_unlock"
            android:icon="@drawable/baseline_compare_24"
            android:defaultValue="true"
            />

    </tk.zwander.collapsiblepreferencecategory.CollapsiblePreferenceCategoryNew>

</PreferenceScreen>